--- a/index.html
+++ b/index.html
@@ -4,23 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rise Business Solutions Kft.</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
-    <!-- Header Section -->
-    <header class="hero">
+    <!-- Top Navigation -->
+    <header class="top-nav">
         <div class="container">
-            <h1 class="hero-title">RISE, Your Trusted Partner in SAP Solutions</h1>
-            <p class="hero-text">Specializing in end-to-end SAP solutions, we drive efficiency, innovation, and growth for businesses of all sizes.</p>
-            <a href="#services" class="cta-button">Explore Our Services</a>
+            <div class="logo">
+                <h1>RISE Solutions</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container">
+            <h1>Your Trusted Partner in SAP Solutions</h1>
+            <p>Helping businesses of all sizes streamline operations, gain insights, and enhance capabilities with SAP.</p>
+            <a href="#services" class="cta-button">Explore Our Services</a>
+        </div>
+    </section>
 
     <!-- About Section -->
     <section class="about" id="about">
         <div class="container">
             <h2>About Us</h2>
-            <p>At RISE Business Solutions, we offer SAP implementation, license sales, and strategic consultancy tailored to your unique business needs. Our proven approach combines technical expertise with industry insights to help you leverage the full potential of SAP for a competitive edge.</p>
+            <p>At RISE Business Solutions, we specialize in delivering end-to-end SAP solutions. With extensive experience and a team of skilled consultants, we tailor solutions that align with your business needs to ensure success.</p>
         </div>
     </section>
 
@@ -28,18 +44,31 @@
     <section class="services" id="services">
         <div class="container">
             <h2>Our Services</h2>
-            <ul>
-                <li>SAP Implementation</li>
-                <li>License Sales</li>
-                <li>Strategic Consultancy</li>
-                <li>Custom SAP Solutions</li>
-            </ul>
+            <div class="services-grid">
+                <div class="service-item">
+                    <h3>SAP Implementation</h3>
+                    <p>Streamline operations with seamless implementation tailored to your business.</p>
+                </div>
+                <div class="service-item">
+                    <h3>License Sales</h3>
+                    <p>Purchase official SAP licenses with guidance from our experts.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Strategic Consultancy</h3>
+                    <p>Transform your business with insights and strategies from experienced consultants.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Custom SAP Solutions</h3>
+                    <p>Adapt and innovate with bespoke solutions for your unique challenges.</p>
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <footer class="footer">
+    <footer class="footer" id="contact">
         <div class="container">
+            <h2>Contact Us</h2>
             <p><strong>Rise Business Solutions Kft.</strong></p>
             <p>1138 Budapest, Madarász Viktor utca 47-49. 2. ép. 3. emelet</p>
             <p>Phone: +36-1-412-2549 | Email: <a href="mailto:info@risesolutions.hu">info@risesolutions.hu</a></p>
