--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rise Business Solutions Kft.</title>
-    <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="styles3.css">
 </head>
 <body>
     <!-- Top Navigation -->
     <header class="top-nav">
         <div class="container">
             <div class="logo">
-                <h1>RISE Solutions</h1>
+                <img src="https://risesolutions.hu/rise_logo_cmyk.png" alt="RISE Logo" />
             </div>
             <nav>
                 <ul>
