--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rise Business Solutions Kft.</title>
-    <link rel="stylesheet" href="styles3.css">
+    <link rel="stylesheet" href="styles4.css">
 </head>
 <body>
     <!-- Top Navigation -->
@@ -36,7 +36,8 @@
     <section class="about" id="about">
         <div class="container">
             <h2>About Us</h2>
-            <p>At RISE Business Solutions, we specialize in delivering end-to-end SAP solutions. With extensive experience and a team of skilled consultants, we tailor solutions that align with your business needs to ensure success.</p>
+            <p>At RISE Business Solutions, we are committed to delivering world-class SAP services that empower businesses to achieve more. With years of experience, our team of experts specializes in simplifying complex business challenges through tailored SAP solutions. Whether you're a small business or a global enterprise, we help you unlock growth potential through seamless integration and optimization of SAP technologies.</p>
+            <p>Our philosophy is centered on building long-term partnerships. By deeply understanding your business, we ensure that our solutions not only solve immediate challenges but also lay the foundation for sustained success. From strategy to execution, we pride ourselves on delivering measurable results, superior client satisfaction, and unmatched value.</p>
         </div>
     </section>
 
@@ -47,19 +48,27 @@
             <div class="services-grid">
                 <div class="service-item">
                     <h3>SAP Implementation</h3>
-                    <p>Streamline operations with seamless implementation tailored to your business.</p>
+                    <p>Transform your business processes with expertly managed SAP implementation. Our team ensures a smooth transition, minimizing disruptions while maximizing efficiency.</p>
                 </div>
                 <div class="service-item">
                     <h3>License Sales</h3>
-                    <p>Purchase official SAP licenses with guidance from our experts.</p>
+                    <p>Gain access to official SAP licenses, supported by our expert recommendations to meet your exact business requirements.</p>
                 </div>
                 <div class="service-item">
                     <h3>Strategic Consultancy</h3>
-                    <p>Transform your business with insights and strategies from experienced consultants.</p>
+                    <p>Achieve your business goals with strategic insights and actionable plans from our experienced SAP consultants.</p>
                 </div>
                 <div class="service-item">
                     <h3>Custom SAP Solutions</h3>
-                    <p>Adapt and innovate with bespoke solutions for your unique challenges.</p>
+                    <p>Leverage bespoke SAP solutions tailored to your specific industry and business needs, designed to provide maximum value and scalability.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Data Migration</h3>
+                    <p>Ensure a seamless transition of your critical business data with our secure and efficient data migration services.</p>
+                </div>
+                <div class="service-item">
+                    <h3>Ongoing Support</h3>
+                    <p>Our team is here for you post-implementation, providing reliable support and continuous optimization for your SAP environment.</p>
                 </div>
             </div>
         </div>
@@ -72,7 +81,7 @@
             <p><strong>Rise Business Solutions Kft.</strong></p>
             <p>1138 Budapest, Madarász Viktor utca 47-49. 2. ép. 3. emelet</p>
             <p>Phone: +36-1-412-2549 | Email: <a href="mailto:info@risesolutions.hu">info@risesolutions.hu</a></p>
-            <p><a href="https://risesolutions.hu/services" class="footer-link">Learn More About Our Services</a></p>
+            <p>Looking for tailored solutions for your business? <a href="https://risesolutions.hu/services" class="footer-link">Explore Our Services</a>.</p>
         </div>
     </footer>
 </body>
