--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rise Business Solutions Kft.</title>
-    <link rel="stylesheet" href="styles4.css">
+    <link rel="stylesheet" href="styles5.css">
 </head>
 <body>
     <!-- Top Navigation -->
@@ -22,6 +22,7 @@
             </nav>
         </div>
     </header>
+    <div class="light-green-bar"></div>
 
     <!-- Hero Section -->
     <section class="hero">
@@ -62,26 +63,23 @@
                     <h3>Custom SAP Solutions</h3>
                     <p>Leverage bespoke SAP solutions tailored to your specific industry and business needs, designed to provide maximum value and scalability.</p>
                 </div>
-                <div class="service-item">
-                    <h3>Data Migration</h3>
-                    <p>Ensure a seamless transition of your critical business data with our secure and efficient data migration services.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Ongoing Support</h3>
-                    <p>Our team is here for you post-implementation, providing reliable support and continuous optimization for your SAP environment.</p>
-                </div>
             </div>
         </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- Footer Section -->
     <footer class="footer" id="contact">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <p><strong>Rise Business Solutions Kft.</strong></p>
-            <p>1138 Budapest, Madarász Viktor utca 47-49. 2. ép. 3. emelet</p>
-            <p>Phone: +36-1-412-2549 | Email: <a href="mailto:info@risesolutions.hu">info@risesolutions.hu</a></p>
-            <p>Looking for tailored solutions for your business? <a href="https://risesolutions.hu/services" class="footer-link">Explore Our Services</a>.</p>
+        <div class="footer-container">
+            <div class="footer-left">
+                <img src="https://risesolutions.hu/rise_logo_cmyk.png" alt="RISE Logo" />
+            </div>
+            <div class="footer-right">
+                <p><strong>Rise Business Solutions Kft.</strong></p>
+                <p>1138 Budapest, Madarász Viktor utca 47-49. 2. ép. 3. emelet</p>
+                <p>Phone: +36-1-412-2549</p>
+                <p>Email: <a href="mailto:info@risesolutions.hu">info@risesolutions.hu</a></p>
+                <a href="#services" class="footer-link">Explore Our Services</a>
+            </div>
         </div>
     </footer>
 </body>
