--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rise Business Solutions Kft.</title>
-    <link rel="stylesheet" href="styles5.css">
+    <link rel="stylesheet" href="styles6.css">
 </head>
 <body>
     <!-- Top Navigation -->
@@ -22,9 +22,8 @@
             </nav>
         </div>
     </header>
-    <div class="light-green-bar"></div>
 
-    <!-- Hero Section -->
+    <!-- Title Section -->
     <section class="hero">
         <div class="container">
             <h1>Your Trusted Partner in SAP Solutions</h1>
@@ -38,7 +37,6 @@
         <div class="container">
             <h2>About Us</h2>
             <p>At RISE Business Solutions, we are committed to delivering world-class SAP services that empower businesses to achieve more. With years of experience, our team of experts specializes in simplifying complex business challenges through tailored SAP solutions. Whether you're a small business or a global enterprise, we help you unlock growth potential through seamless integration and optimization of SAP technologies.</p>
-            <p>Our philosophy is centered on building long-term partnerships. By deeply understanding your business, we ensure that our solutions not only solve immediate challenges but also lay the foundation for sustained success. From strategy to execution, we pride ourselves on delivering measurable results, superior client satisfaction, and unmatched value.</p>
         </div>
     </section>
 
@@ -59,10 +57,6 @@
                     <h3>Strategic Consultancy</h3>
                     <p>Achieve your business goals with strategic insights and actionable plans from our experienced SAP consultants.</p>
                 </div>
-                <div class="service-item">
-                    <h3>Custom SAP Solutions</h3>
-                    <p>Leverage bespoke SAP solutions tailored to your specific industry and business needs, designed to provide maximum value and scalability.</p>
-                </div>
             </div>
         </div>
     </section>
@@ -78,7 +72,6 @@
                 <p>1138 Budapest, Madarász Viktor utca 47-49. 2. ép. 3. emelet</p>
                 <p>Phone: +36-1-412-2549</p>
                 <p>Email: <a href="mailto:info@risesolutions.hu">info@risesolutions.hu</a></p>
-                <a href="#services" class="footer-link">Explore Our Services</a>
             </div>
         </div>
     </footer>
