--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rise Business Solutions Kft.</title>
-    <link rel="stylesheet" href="styles6.css">
+    <link rel="stylesheet" href="styles7.css">
 </head>
 <body>
     <!-- Top Navigation -->
@@ -26,8 +26,8 @@
     <!-- Title Section -->
     <section class="hero">
         <div class="container">
-            <h1>Your Trusted Partner in SAP Solutions</h1>
-            <p>Helping businesses of all sizes streamline operations, gain insights, and enhance capabilities with SAP.</p>
+            <h1>Your Trusted Partner in<br>SAP Solutions</h1>
+            <p>Helping businesses of all sizes streamline operations, <br>gain insights, and enhance capabilities with SAP.</p>
             <a href="#services" class="cta-button">Explore Our Services</a>
         </div>
     </section>
@@ -43,24 +43,36 @@
     <!-- Services Section -->
     <section class="services" id="services">
         <div class="container">
-            <h2>Our Services</h2>
+            <h2>Our Services</h2><br>
             <div class="services-grid">
-                <div class="service-item">
+                <div class="service-box">
                     <h3>SAP Implementation</h3>
                     <p>Transform your business processes with expertly managed SAP implementation. Our team ensures a smooth transition, minimizing disruptions while maximizing efficiency.</p>
                 </div>
-                <div class="service-item">
+                <div class="service-box">
                     <h3>License Sales</h3>
                     <p>Gain access to official SAP licenses, supported by our expert recommendations to meet your exact business requirements.</p>
                 </div>
-                <div class="service-item">
+                <div class="service-box">
                     <h3>Strategic Consultancy</h3>
                     <p>Achieve your business goals with strategic insights and actionable plans from our experienced SAP consultants.</p>
+                </div>
+                <div class="service-box">
+                    <h3>Custom SAP Solutions</h3>
+                    <p>Leverage bespoke SAP solutions tailored to your specific industry and business needs, designed to provide maximum value and scalability.</p>
+                </div>
+                <div class="service-box">
+                    <h3>Business Process Reengineering</h3>
+                    <p>Reengineering your business processes for efficiency including project management and business analyses.</p>
+                </div>
+                <div class="service-box">
+                    <h3>SAP Training</h3>
+                    <p>Our SAP experts and instructors can help you gain the neccessary skills on-site for the transformation of your processes and practical SAP operations.</p>
                 </div>
             </div>
         </div>
     </section>
-
+<p><br></p>
     <!-- Footer Section -->
     <footer class="footer" id="contact">
         <div class="footer-container">
@@ -72,6 +84,7 @@
                 <p>1138 Budapest, Madarász Viktor utca 47-49. 2. ép. 3. emelet</p>
                 <p>Phone: +36-1-412-2549</p>
                 <p>Email: <a href="mailto:info@risesolutions.hu">info@risesolutions.hu</a></p>
+                <p><a href="https://www.risesolutions.hu/services">Log in to the SAP</a></p>
             </div>
         </div>
     </footer>
