--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rise Business Solutions Kft.</title>
-    <link rel="stylesheet" href="styles7.css">
+    <link rel="stylesheet" href="styles8.css">
 </head>
 <body>
     <!-- Top Navigation -->
@@ -27,7 +27,7 @@
     <section class="hero">
         <div class="container">
             <h1>Your Trusted Partner in<br>SAP Solutions</h1>
-            <p>Helping businesses of all sizes streamline operations, <br>gain insights, and enhance capabilities with SAP.</p>
+            <p>Helping businesses of all sizes streamline operations, gain insights, and enhance capabilities with SAP.</p>
             <a href="#services" class="cta-button">Explore Our Services</a>
         </div>
     </section>
@@ -43,7 +43,7 @@
     <!-- Services Section -->
     <section class="services" id="services">
         <div class="container">
-            <h2>Our Services</h2><br>
+            <h2>Our Services</h2>
             <div class="services-grid">
                 <div class="service-box">
                     <h3>SAP Implementation</h3>
@@ -67,12 +67,12 @@
                 </div>
                 <div class="service-box">
                     <h3>SAP Training</h3>
-                    <p>Our SAP experts and instructors can help you gain the neccessary skills on-site for the transformation of your processes and practical SAP operations.</p>
+                    <p>Our SAP experts and instructors can help you gain the necessary skills on-site for the transformation of your processes and practical SAP operations.</p>
                 </div>
             </div>
         </div>
     </section>
-<p><br></p>
+
     <!-- Footer Section -->
     <footer class="footer" id="contact">
         <div class="footer-container">
