Link text adjusted

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <p>1138 Budapest, Madarász Viktor utca 47-49. 2. ép. 3. emelet</p>
                 <p>Phone: +36-1-412-2549</p>
                 <p>Email: <a href="mailto:info@risesolutions.hu">info@risesolutions.hu</a></p>
-                <p><a href="https://www.risesolutions.hu/services">Log in to the SAP</a></p>
+                <p><a href="https://www.risesolutions.hu/services">Log in to SAP</a></p>
             </div>
         </div>
     </footer>
